crates/emela-codegen-js/tests/snapshots/run__enum_match.snap
---
source: crates/emela-codegen-js/tests/run.rs
expression: r.js
---
// Emela が生成したコード．
import { $eq, $showBool, $showFloat, $unreachable } from "./emela_runtime.mjs";

const Shape$Empty = Object.freeze({ $tag: 2 });

function describe(s$0) {
  if (s$0.$tag === 0) {
    const r$1 = s$0.$0;
    if (r$1 > 10.0) {
      return "big circle";
    }
  }
  if (s$0.$tag === 0) {
    const r$2 = s$0.$0;
    return `circle ${$showFloat(r$2)}`;
  }
  if (s$0.$tag === 1) {
    const w$3 = s$0.w;
    const h$4 = s$0.h;
    if (w$3 === h$4) {
      return `square ${$showFloat(w$3)}`;
    }
  }
  if (s$0.$tag === 1) {
    const w$5 = s$0.w;
    return `rect ${$showFloat(w$5)}`;
  }
  if (s$0.$tag === 2) {
    return "empty";
  }
  $unreachable();
}

function norm1(p$6) {
  return ((p$6.x + p$6.y) | 0);
}

function main() {
  return `${describe({ $tag: 0, $0: 12.0 })}\n${describe({ $tag: 0, $0: 1.5 })}\n${describe({ $tag: 1, w: 2.0, h: 2.0 })}\n${describe({ $tag: 1, w: 2.0, h: 3.0 })}\n${describe(Shape$Empty)}\n${norm1({ $tag: 0, x: 3, y: (-4) })}\n${$showBool($eq({ $tag: 1, w: 1.0, h: 2.0 }, { $tag: 1, w: 1.0, h: 2.0 }))}\n${$showBool((!$eq(Shape$Empty, { $tag: 0, $0: 0.0 })))}`;
}

export { main };
